includes/views/css/import-metabox-edit.css
/* ... */
.input-group-addon:last-child {
	border-left: 0;
}

.input-group-btn {
	position: relative;
	font-size: 0;
	white-space: nowrap;
}

.input-group-btn > .btn {
	position: relative;
}

.input-group-btn > .btn + .btn {
	margin-left: -1px;
}

.input-group-btn > .btn:hover,
.input-group-btn > .btn:focus,
.input-group-btn > .btn:active {
	z-index: 2;
}

.input-group-btn:first-child > .btn,
.input-group-btn:first-child > .btn-group {
	margin-right: -1px;
}

.input-group-btn:last-child > .btn,
.input-group-btn:last-child > .btn-group {
	z-index: 2;
	margin-left: -1px;
}


.label_description,
.form_item {
	margin-top: 8px;
	margin-bottom: 8px;
}

.label_description h4 {
	text-align: center;
	text-transform: uppercase;
}

a.dropdown-item,
span.dropdown-item[disabled] {
	display: block;
	padding: 5px 8px;
	color: #f35b3f;
	text-align: center;
	text-decoration: none;
}

span.dropdown-item[disabled] {
	color: #808080;
}

a:hover.dropdown-item,
a:focus.dropdown-item {
	color: #f89c8b;
	background-color: #f8f8f8;
}

.btn.btn-add-fields {
	background-color: #099bb2;
}

.btn.btn-add-fields:hover {
	background-color: #14b2cc;
}

.btn.btn-remove-fields {
	color: #f35b3f;
}

.btn.btn-remove-fields:hover {
	color: #f89c8b;
}

.btn > span.dashicons {
	vertical-align: middle;
}

.f1 {
	padding: 30px;
	padding-top: 10px;
	border-radius: 4px;
	background: #fff;
}

.f1 h3 {
	margin-top: 0;
	margin-bottom: 10px;
	text-transform: uppercase;
	background-color: #f1f1f1;
	padding: 5px;
    border-radius: 5px;
    text-indent: 1%;
}

.f1 h3:nth-of-type(n+2) {
	margin-top: 30px;
}

.f1-steps {
	overflow: hidden;
	position: relative;
	margin-top: 20px;
}

.f1-progress {
	position: absolute;
	top: 24px;
	left: 0;
	width: 100%;
	height: 1px;
	background: #ddd;
}

.f1-progress-line {
	position: absolute;
	top: 0;
	left: 0;
	height: 1px;
	background: #f35b3f;
}

.f1-step {
	display: inline-block;
	position: relative;
	width: calc(100%/3 - 10px);
	width: -webkit-calc(100%/3 - 10px);
	text-align: center;
}

.f1-step-icon {
	display: inline-block;
	width: 40px;
	height: 40px;
	margin-top: 4px;
	border-radius: 50%;
	color: #fff;
	background: #ddd;
	font-size: 16px;
	line-height: 40px;
}

.f1-step-icon span {
	display: inline-block;
	width: 18px;
	height: 18px;
	padding: 11px;
	font-size: 18px;
}

.f1-step.activated .f1-step-icon span {
	width: 20px;
	height: 20px;
	margin-top: -2px;
	margin-left: -1px;
	padding: 12px;
	font-size: 20px;
}

.f1-step.active .f1-step-icon span {
	width: 24px;
	height: 24px;
	padding: 12px;
	font-size: 24px;
}

.f1-step.activated .f1-step-icon {
	border: 1px solid #f35b3f;
	color: #f35b3f;
	background: #fff;
	line-height: 48px;
}

.f1-step.active .f1-step-icon {
	width: 48px;
	height: 48px;
	margin-top: 0;
	background: #f35b3f;
	font-size: 22px;
	line-height: 48px;
}

.f1-step p {
	color: #ccc;
}

.f1-step.activated p {
	color: #f35b3f;
}

.f1-step.active p {
	color: #f35b3f;
}

.f1 fieldset {
	text-align: left;
}

.f1-buttons {
	text-align: right;
}

.f1 .input-error {
	border-color: #f35b3f;
}

input[type="text"],
input[type="password"],
input[type="number"],
textarea,
textarea.form-control {
	width: 100%;
	height: 44px;
	margin: 0;
	padding: 0 20px;
	border: 1px solid #ddd;
	border-radius: 4px;
	color: #888;
	background: #fff;
	box-shadow: none;
	font-family: "Roboto", sans-serif;
	font-size: 16px;
	font-weight: 300;
	line-height: 44px;
	vertical-align: middle;
	-webkit-transition: all 0.3s;
	transition: all 0.3s;
}

textarea,
textarea.form-control {
	height: 90px;
}

input[type="text"]:focus,
input[type="password"]:focus,
input[type="number"]:focus,
textarea:focus,
textarea.form-control:focus {
	border: 1px solid #ccc;
	outline: 0;
	background: #fff;
	box-shadow: none;
}

input[type="text"]:-moz-placeholder,
input[type="password"]:-moz-placeholder,
input[type="number"]:-moz-placeholder,
textarea:-moz-placeholder,
textarea.form-control:-moz-placeholder {
	color: #888;
}

input[type="text"]:-ms-input-placeholder,
input[type="password"]:-ms-input-placeholder,
input[type="number"]:-ms-input-placeholder,
textarea:-ms-input-placeholder,
textarea.form-control:-ms-input-placeholder {
	color: #888;
}

input[type="text"]::-webkit-input-placeholder,
input[type="password"]::-webkit-input-placeholder,
input[type="number"]::-webkit-input-placeholder,
textarea::-webkit-input-placeholder,
textarea.form-control::-webkit-input-placeholder {
	color: #888;
}

label {
	font-weight: 300;
}

label.feedzy-sr-only {
	font-weight: 400;
}

fieldset.feedzy-screen3 label.feedzy-sr-only {
	font-size: larger;
}

button.btn {
	min-width: 105px;
	height: 44px;
	margin: 0;
	padding: 0 20px;
	border: 0;
	border-radius: 4px;
	color: #fff;
	box-shadow: none;
	text-shadow: none;
	font-family: "Roboto", sans-serif;
	font-size: 16px;
	font-weight: 300;
	line-height: 40px;
	vertical-align: middle;
	-webkit-transition: all 0.3s;
	transition: all 0.3s;
}

button.btn:hover {
	opacity: 0.6;
	color: #fff;
}

button.btn:active {
	outline: 0;
	opacity: 0.6;
	color: #fff;
	box-shadow: none;
}

button.btn:focus,
button.btn:active:focus,
button.btn.active:focus {
	outline: 0;
	opacity: 0.6;
	color: #fff;
}

button.btn.btn-next,
button.btn.btn-next:focus,
button.btn.btn-next:active:focus,
button.btn.btn-next.active:focus {
	background: #f35b3f;
}

button.btn.btn-submit,
button.btn.btn-submit:focus,
button.btn.btn-submit:active:focus,
button.btn.btn-submit.active:focus {
	background: #f35b3f;
}

button.btn.btn-previous,
button.btn.btn-previous:focus,
button.btn.btn-previous:active:focus,
button.btn.btn-previous.active:focus {
	background: #bbb;
}

button.btn.btn-submit.btn-activate,
button.btn.btn-submit.btn-activate:focus,
button.btn.btn-submit.btn-activate:active:focus,
button.btn.btn-submit.btn-activate.active:focus {
	background: #8ce196;
}

/*
Toggle switches
*/
.feedzy-toggle {
	visibility: hidden;
	position: absolute;
	margin-left: -9999px;
}
/* ... */

